## *********************************************************************
## *
## * Copyright (c) 2002 CERN and INFN on behalf of the EU DataGrid.
## * For license conditions see LICENSE file or
## * http://www.edg.org/license.html
## *
## *********************************************************************

## Process this file with automake to produce Makefile.in

## Subdirectories list
SUBDIRS = src

## Default flags to run aclocal
ACLOCAL_AMFLAGS = -I project
